GHA JTLabs: use bundled RtAudio in macOS build

--- a/.github/workflows/jacktriplabs.yml
+++ b/.github/workflows/jacktriplabs.yml
@@ -57,11 +57,11 @@ jobs:
       fail-fast: false # don't abort if one of the build failse
       matrix:
         include:
-          - name: macOS-x64-qmake-clang-static
+          - name: macOS-x64-qmake-clang-static-bundled_rtaudio
             release-name: macOS-x64
             runs-on: macos-11
-            system-rtaudio: true
-            bundled-rtaudio: false
+            system-rtaudio: false
+            bundled-rtaudio: true
             nogui: false
             novs: false
             weakjack: true
