GHA: use system RtAudio in macOS qmake shared bld
Since we now use bundled RtAudio in the main macOS build, change the shared build to use system RtAudio for testing that build configuration.

--- a/.github/workflows/jacktrip.yml
+++ b/.github/workflows/jacktrip.yml
@@ -117,10 +117,10 @@ jobs:
             installer-path: installer
             build-system: qmake
 
-          - name: macOS-x64-qmake-clang-shared-bundled_rtaudio
+          - name: macOS-x64-qmake-clang-shared
             runs-on: macos-11
-            system-rtaudio: false
-            bundled-rtaudio: true
+            system-rtaudio: true
+            bundled-rtaudio: false
             nogui: false
             novs: false
             weakjack: true
