GHA: use built-in caching when installing Qt
this is for the "regular" shared Qt library

--- a/.github/workflows/jacktrip.yml
+++ b/.github/workflows/jacktrip.yml
@@ -312,20 +312,14 @@ jobs:
       - name: setup MSVC
         uses: ilammy/msvc-dev-cmd@v1
         if: runner.os == 'Windows' && matrix.build-system == 'meson' # MSVC used only by meson
-      - name: cache Qt
-        id: cache-qt
-        if: matrix.qt-arch && !matrix.static-qt-version
-        uses: actions/cache@v3
-        with:
-          path: ../Qt
-          key: $${{ runner.os }}-QtCache-${{ env.QT_VERSION }}-${{ matrix.build-system }}_${{matrix.qt-cache-key}}
       - name: install Qt
-        uses: jurplel/install-qt-action@v2
+        uses: jurplel/install-qt-action@v3
         if: runner.os == 'Windows' && !matrix.static-qt-version
         with:
           version: ${{ env.QT_VERSION }}
           arch: ${{ matrix.qt-arch }}
-          cached: ${{ steps.cache-qt.outputs.cache-hit }}
+          cache: true
+          cache-key-prefix: $${{ runner.os }}-QtCache-${{ env.QT_VERSION }}-${{ matrix.build-system }}_${{matrix.qt-cache-key}}
           modules: 'qtnetworkauth'
       - name: cache static Qt
         id: cache-static-qt
