--- a/.github/workflows/jacktrip.yml
+++ b/.github/workflows/jacktrip.yml
@@ -234,10 +234,18 @@ jobs:
           fi
           echo "::set-output name=version::$VERSION"
           echo "::set-output name=name::$NAME"
+          echo "::set-output name=stamp::$(date '+%Y-%m-%d')" # set timestamp for cache
       - name: setup python
         uses: actions/setup-python@v2
         with:
           python-version: '3.x'
+      - name: cache vcpkg on Windows
+        if: runner.os == 'Windows' && matrix.vcpkg-triplet
+        uses: actions/cache@v3
+        with:
+          path: ~/AppData/Local/vcpkg/archives
+          key: ${{ matrix.runs-on }}-${{ matrix.vcpkg-triplet }}-${{ matrix.system-rtaudio }}-${{ steps.set-version.outputs.stamp }}
+          restore-keys: ${{ matrix.runs-on }}-${{ matrix.vcpkg-triplet }}-${{ matrix.system-rtaudio }}
       - name: install dependencies for Linux
         if: runner.os == 'Linux'
         run: |
