--- a/docs/changelog.yml
+++ b/docs/changelog.yml
@@ -1,3 +1,9 @@
+- Version: "1.6.3"
+  Date: 2022-08-23
+  Description:
+  - (fixed) Segfault when creating a hub server via cmd line
+  - (fixed) Linux desktop file is no longer invalid
+  - (fixed) Command line arguments no longer print to console
 - Version: "1.6.2"
   Date: 2022-08-05
   Description:
