change filename to Meter.cpp/Meter.h

--- a/meson.build
+++ b/meson.build
@@ -35,7 +35,7 @@ src = [	'src/DataProtocol.cpp',
 	'src/AudioInterface.cpp',
 	'src/Compressor.cpp',
 	'src/Limiter.cpp',
-	'src/VuMeter.cpp',
+	'src/Meter.cpp',
 	'src/Reverb.cpp',
 	'src/main.cpp',
 	'src/SslServer.cpp',
@@ -44,7 +44,7 @@ src = [	'src/DataProtocol.cpp',
 moc_h = ['src/DataProtocol.h',
 	'src/JackTrip.h',
 	'src/ProcessPlugin.h',
-	'src/VuMeter.h',
+	'src/Meter.h',
 	'src/JackTripWorker.h',
 	'src/PacketHeader.h',
 	'src/Settings.h',
