--- a/.github/workflows/jacktrip.yml
+++ b/.github/workflows/jacktrip.yml
@@ -250,7 +250,7 @@ jobs:
         if: runner.os == 'Linux'
         run: |
           sudo apt-get update
-          sudo apt-get install --yes libjack-dev desktop-file-utils
+          sudo apt-get install --yes libjack-dev
           if [[ -n "${{ matrix.static-qt-version }}" ]]; then 
             sudo apt-get install --yes libfreetype6-dev libxi-dev libxkbcommon-dev libxkbcommon-x11-dev libx11-xcb-dev libdrm-dev libglu1-mesa-dev libwayland-dev libwayland-egl1-mesa libgles2-mesa-dev libwayland-server0 libwayland-egl-backend-dev libxcb1-dev libxext-dev libfontconfig1-dev libxrender-dev libxcb-keysyms1-dev libxcb-image0-dev libxcb-shm0-dev libxcb-icccm4-dev libxcb-render-util0-dev libxcomposite-dev libgtk-3-dev
           else
@@ -268,6 +268,9 @@ jobs:
             sudo apt-get install --yes help2man clang-tidy
             python -m pip install --upgrade pip
             pip install meson ninja pyyaml Jinja2
+          fi
+          fi [[ "${{ matrix.nogui }}" == true ]]; then
+            sudo apt-get install --yes desktop-file-utils
           fi
       - name: install dependencies for macOS
         if: runner.os == 'macOS'
@@ -445,7 +448,7 @@ jobs:
         if: runner.os == 'Linux'
         shell: bash
         run: |
-          ls $BUILD_PATH
+          ls $BUILD_PATH/linux
           desktop-file-validate $BUILD_PATH/org.jacktrip.JackTrip.desktop
       - name: compress the binary
         shell: bash
