--- a/.github/workflows/jacktrip.yml
+++ b/.github/workflows/jacktrip.yml
@@ -383,7 +383,7 @@ jobs:
           VCPKG_TRIPLET: ${{ matrix.vcpkg-triplet }}
       - name: set Qt environment variables # needed to find qmake depending on the way qt was installed
         shell: bash
-        if: matrix.build-system == 'qmake' && !matrix.nogui
+        if: matrix.build-system == 'qmake'
         run: |
           if [[ -n "${{ matrix.static-qt-version }}" ]]; then 
             echo "$QT_STATIC_BUILD_PATH/bin" >> $GITHUB_PATH
@@ -445,7 +445,7 @@ jobs:
           cd $BUILD_PATH
           meson compile
       - name: validate desktop file
-        if: runner.os == 'Linux'
+        if: runner.os == 'Linux' && !matrix.nogui
         shell: bash
         run: |
           DESKTOP_FILE_PATH=$BUILD_PATH/org.jacktrip.JackTrip.desktop
