--- a/meson.build
+++ b/meson.build
@@ -110,6 +110,7 @@ else
 		src += [
 			'src/gui/virtualstudio.cpp',
 			'src/gui/vsDevice.cpp',
+			'src/gui/vsAudioInterface.cpp',
 			'src/gui/vsServerInfo.cpp',
 			'src/gui/vsQuickView.cpp',
 			'src/gui/vsWebSocket.cpp',
@@ -120,6 +121,7 @@ else
 		moc_h += [
 			'src/gui/virtualstudio.h',
 			'src/gui/vsDevice.h',
+			'src/gui/vsAudioInterface.h',
 			'src/gui/vsServerInfo.h',
 			'src/gui/vsQuickView.h',
 			'src/gui/vsWebSocket.h',
