--- a/.github/workflows/jacktrip.yml
+++ b/.github/workflows/jacktrip.yml
@@ -182,6 +182,7 @@ jobs:
             nogui: false
             novs: false
             weakjack: true
+            qmake-config-options: '-config x86'
             vcpkg-triplet: x86-mingw-dynamic
             qt-arch: 'win32_mingw81'
             qt-cache-key: 'v01-32'
@@ -432,6 +433,9 @@ jobs:
           fi
           if [[ "${{ matrix.weakjack }}" == true ]]; then 
             CONFIG_STRING="weakjack $CONFIG_STRING"
+          fi
+          if [[ -n "${{ matrix.qmake-config-options }}" ]]; then 
+            CONFIG_STRING="static ${{ matrix.qmake-config-options }}"
           fi
           ./build $CONFIG_STRING
       - name: build JackTrip with Meson
