--- a/.github/workflows/jacktrip.yml
+++ b/.github/workflows/jacktrip.yml
@@ -182,7 +182,7 @@ jobs:
             nogui: false
             novs: false
             weakjack: true
-            qmake-config-options: '-config noupdater'
+            noupdater: true
             vcpkg-triplet: x86-mingw-static
             static-qt-version: 5.15.2
             qt-static-cache-key: 'v07-32'
@@ -200,7 +200,7 @@ jobs:
             nogui: false
             novs: false
             weakjack: true
-            qmake-config-options: '-config noupdater'
+            noupdater: true
             vcpkg-triplet: x86-mingw-dynamic
             qt-arch: 'win32_mingw81'
             add-to-path: '/c/msys64/mingw32/bin' # $PATH will be prepended with this 
@@ -457,8 +457,8 @@ jobs:
           if [[ "${{ matrix.weakjack }}" == true ]]; then 
             CONFIG_STRING="weakjack $CONFIG_STRING"
           fi
-          if [[ -n "${{ matrix.qmake-config-options }}" ]]; then 
-            CONFIG_STRING="$CONFIG_STRING ${{ matrix.qmake-config-options }}"
+          if [[ "${{ matrix.noupdater }}" == true ]]; then 
+            CONFIG_STRING="noupdater $CONFIG_STRING"
           fi
           ./build $CONFIG_STRING
       - name: build JackTrip with Meson
