--- a/.github/workflows/jacktrip.yml
+++ b/.github/workflows/jacktrip.yml
@@ -493,6 +493,10 @@ jobs:
       - name: create installer on Windows
         if: runner.os == 'Windows' && matrix.installer-path
         shell: cmd
+        env:
+          QTBINPATH: ${{ env.Qt5_DIR }}\bin
+          QTLIBPATH: c:\msys64\mingw32\bin
+          SSLPATH: c:\msys64\mingw32\bin
         run: |
           cd win
           call "build_installer.bat"
