--- a/.github/workflows/jacktrip.yml
+++ b/.github/workflows/jacktrip.yml
@@ -421,6 +421,9 @@ jobs:
           if [[ "${{ matrix.weakjack }}" == true ]]; then 
             CONFIG_STRING="weakjack $CONFIG_STRING"
           fi
+          if [[ "${{ matrix.noupdater }}" == true ]]; then 
+            CONFIG_STRING="noupdater $CONFIG_STRING"
+          fi
           ./build $CONFIG_STRING
       - name: build JackTrip with Meson
         if: matrix.build-system == 'meson'
