Setup volume sliders for plugin

--- a/meson.build
+++ b/meson.build
@@ -36,6 +36,7 @@ src = [	'src/DataProtocol.cpp',
 	'src/Compressor.cpp',
 	'src/Limiter.cpp',
 	'src/Meter.cpp',
+	'src/Volume.cpp',
 	'src/Reverb.cpp',
 	'src/main.cpp',
 	'src/SslServer.cpp',
@@ -45,6 +46,7 @@ moc_h = ['src/DataProtocol.h',
 	'src/JackTrip.h',
 	'src/ProcessPlugin.h',
 	'src/Meter.h',
+	'src/Volume.h',
 	'src/JackTripWorker.h',
 	'src/PacketHeader.h',
 	'src/Settings.h',
