Modifications for Windows Qt6 build
Allow cmake and installer to handle qt6 builds on windows.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,7 @@ set(rtaudio TRUE)
 set(weakjack TRUE)
 set(novs TRUE)
 set(psi TRUE)
-set(QtVersion "Qt5")
+set(QtVersion "5")
 
 message(STATUS "Hello Aaron! For anyone else, heed the following warning:")
 message(WARNING "The CMake build of JackTrip is currently NOT officially supported. Meson or QMake are recommended for a full featured build."
@@ -77,12 +77,17 @@ elseif (${CMAKE_SYSTEM_NAME} MATCHES "Windows")
     include_directories("C:/Program Files (x86)/Jack/includes")
     set (jacklib "C:/Program Files (x86)/Jack/lib/libjack64.lib")
   endif ()
-  set (CMAKE_PREFIX_PATH "C:/Qt/5.15.2/mingw81_64/lib/cmake")
+  file(GLOB QtDirs "C:/Qt/${QtVersion}.*.*/mingw*_64")
+  list(GET QtDirs 0 QtDir)
+  message(STATUS "Using Qt found at ${QtDir}")
+  set (CMAKE_PREFIX_PATH "${QtDir}")
   if (rtaudio)
     include_directories("C:/Program Files (x86)/RtAudio/include")
     set (rtaudiolib "C:/Program Files (x86)/RtAudio/lib/librtaudio.dll.a")
   endif ()
 endif ()
+
+string(PREPEND QtVersion "Qt")
 
 if (${CMAKE_SYSTEM_NAME} MATCHES "Linux" OR ${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
   find_package(PkgConfig REQUIRED)
