--- a/meson.build
+++ b/meson.build
@@ -37,6 +37,7 @@ src = [	'src/DataProtocol.cpp',
 	'src/Limiter.cpp',
 	'src/Meter.cpp',
 	'src/Volume.cpp',
+	'src/Tone.cpp',
 	'src/Reverb.cpp',
 	'src/main.cpp',
 	'src/SslServer.cpp',
@@ -47,6 +48,7 @@ moc_h = ['src/DataProtocol.h',
 	'src/ProcessPlugin.h',
 	'src/Meter.h',
 	'src/Volume.h',
+	'src/Tone.h',
 	'src/JackTripWorker.h',
 	'src/PacketHeader.h',
 	'src/Settings.h',
