--- a/build
+++ b/build
@@ -164,13 +164,14 @@ cd builddir
 set -e
 
 # Build
+QCMDARGS=(-spec $QSPEC $CONFIG "$UNKNOWN_OPTIONS" $PRO_FILE)
 echo "qmake command:"
-echo "$QCMD -spec $QSPEC $CONFIG $PRO_FILE" $UNKNOWN_OPTIONS
+echo $QCMD ${QCMDARGS[@]}
 if [[ $clean == 1 ]]; then
-  $QCMD -spec $QSPEC $CONFIG $PRO_FILE $UNKNOWN_OPTIONS
+  $QCMD ${QCMDARGS[@]}
   $MCMD clean
 fi
-$QCMD -spec $QSPEC $CONFIG $PRO_FILE $UNKNOWN_OPTIONS
+$QCMD ${QCMDARGS[@]}
 $MCMD release
 if [[ "$install" == 1 ]]; then
   echo "*** Installing JackTrip ***"
