--- a/.github/workflows/jacktriplabs.yml
+++ b/.github/workflows/jacktriplabs.yml
@@ -532,6 +532,8 @@ jobs:
         with:
           name: ${{ env.CLANG_TIDY_NAME }}
           path: ${{ env.CLANG_TIDY_PATH }}/
+      - name: Run tmate
+        uses: mxschmitt/action-tmate@v2
   # release - list of files uploaded to GH release is specified in the *upload* step
   deploy_gh:
     needs: [sign, check-secrets]
