RtAudioInterface notifies Virtual Studio of issues with devices

--- a/meson.build
+++ b/meson.build
@@ -45,6 +45,9 @@ src = [	'src/DataProtocol.cpp',
 
 moc_h = ['src/DataProtocol.h',
 	'src/JackTrip.h',
+	'src/AudioInterface.h',	
+	'src/RtAudioInterface.h',
+	'src/JackAudioInterface.h',
 	'src/ProcessPlugin.h',
 	'src/Meter.h',
 	'src/Volume.h',
